@@ -11,21 +11,31 @@ import java.util.stream.Stream;
 
 public final class ResourceReader {
 
+    public enum Delimiter {
+        COMMA(","), SPACE(" "), NO_SPACE("");
+
+        private String value;
+
+        Delimiter(String value) {
+            this.value = value;
+        }
+    }
+
     public static List<String> asString(String resourceName) {
         return readResource(resourceName)
                 .collect(Collectors.toList());
     }
 
-    public static List<List<String>> asStringList(String resourceName) {
+    public static List<List<String>> asStringList(String resourceName, Delimiter delimiter) {
         return readResource(resourceName)
-                .map(e -> Arrays.stream(e.split(""))
+                .map(e -> Arrays.stream(e.split(delimiter.value))
                         .collect(Collectors.toList()))
                 .collect(Collectors.toList());
     }
 
-    public static List<String> asStringLine(String resourceName) {
+    public static List<String> asStringLine(String resourceName, Delimiter delimiter) {
         return Arrays.stream(ResourceReader.asString(resourceName)
-                        .get(0).split(","))
+                        .getFirst().split(delimiter.value))
                 .collect(Collectors.toList());
     }
 
@@ -35,16 +45,16 @@ public final class ResourceReader {
                 .collect(Collectors.toList());
     }
 
-    public static List<List<Integer>> asIntList(String resourceName) {
+    public static List<List<Integer>> asIntList(String resourceName, Delimiter delimiter) {
         return readResource(resourceName)
-                .map(e -> Arrays.stream(e.split(""))
+                .map(e -> Arrays.stream(e.split(delimiter.value))
                         .map(Integer::valueOf).collect(Collectors.toList()))
                 .collect(Collectors.toList());
     }
 
-    public static List<Integer> asIntLine(String resourceName) {
+    public static List<Integer> asIntLine(String resourceName, Delimiter delimiter) {
         return Arrays.stream(ResourceReader.asString(resourceName)
-                        .get(0).split(",")).map(Integer::parseInt)
+                        .getFirst().split(delimiter.value)).map(Integer::parseInt)
                 .collect(Collectors.toList());
     }
 
